# Nexus-Core

./: .gitignore  .pre-commit-config.yaml  .trashed-1743529861-conftest.py  .trashed-1743530276-setup.py  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Missing.md  Project Structure.md  README.md  Usage Guide.md  __main__.py  code-stripper.py  config-example.yaml  directory_structure.txt  docker-compose.txt  pyproject.toml  pytest.ini  readme.txt  requirements.txt  setup.py  simpler-uml-generator.py  tox.ini  uml-generator.py  updated-prepare-script.sh
.devcontainer/: devcontainer.json
.github/: SECURITY.md
.github/workflows/: ci-cd.OLD  ci-cd.yml  codeql-analysis.yml
docs/source/: conf.py  index.rst  installation.rst
migrations/: env.py
migrations/versions/: 001_initial.py
nexus_core/: __init__.py  main.py
nexus_core/core/: COMMANDS.md  __init__.py  api_manager.py  app.py  base.py  cloud_manager.py  config_manager.py  database_manager.py  event_bus.py  event_model.py  file_manager.py  logging_manager.py  monitoring_manager.py  plugin_manager.py  remote_manager.py  security_manager.py  thread_manager.py
nexus_core/models/: __init__.py  audit.py  base.py  plugin.py  system.py  user.py
nexus_core/plugins/: __init__.py
nexus_core/plugins/example_plugin/: __init__.py  plugin.py
nexus_core/ui/: __init__.py  main_window.py
nexus_core/utils/: __init__.py  exceptions.py
nexus_for_sharing/: README.md
nexus_for_sharing/code/: __init__.py  main.py
nexus_for_sharing/code/core/: __init__.py  api_manager.py  app.py  base.py  cloud_manager.py  config_manager.py  database_manager.py  event_bus_manager.py  event_model.py  file_manager.py  logging_manager.py  monitoring_manager.py  plugin_manager.py  remote_manager.py  security_manager.py  thread_manager.py
nexus_for_sharing/diagrams/: classes_nexus_core.mmd
nexus_for_sharing_tests/: README.md
nexus_for_sharing_tests/code/: conftest.py
nexus_for_sharing_tests/diagrams/: classes_tests.mmd
tests/: conftest.py
tests/functional/: test_end_to_end.py
tests/integration/: test_api_integration.py  test_database_integration.py
(+47 files in other folders)
