[tool.poetry]
name = "nexus-core"
version = "0.1.0"
description = "Modular platform for automotive aftermarket industry"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "nexus_core"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pydantic = "^2.4.2"
pyside6 = "^6.5.3"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.28.0"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
pika = "^1.3.2"
python-json-logger = "^2.0.7"
psutil = "^5.9.5"
prometheus-client = "^0.17.1"
pyjwt = "^2.8.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
boto3 = "^1.28.50"
azure-storage-blob = "^12.18.3"
google-cloud-storage = "^2.11.0"
tenacity = "^8.2.3"
structlog = "^23.1.0"
trio = "^0.22.2"
typing-extensions = "^4.8.0"
types-python-dateutil = "^2.8.19.14"
types-pytz = "^2023.3.1.1"
types-pyyaml = "^6.0.12.12"
types-requests = "^2.31.0.2"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
ruff = "^0.0.289"
isort = "^5.12.0"
mypy = "^1.5.1"
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
hypothesis = "^6.87.0"
line-profiler = "^4.1.1"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "B", "I", "C4", "C90", "N", "D"]
ignore = ["D203", "D213"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["D"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
